--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-02-feedback",
+  "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://Dmytro-Kucherenko-Kyiv.github.io/goit-react-hw-02-feedback/",
@@ -11,7 +11,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.9",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
